--- a/Projeto Individual/login.html
+++ b/Projeto Individual/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Met</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="login.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -34,5 +34,27 @@
           </ul>
         </div>
       </div>
+
+      <div class="container">
+        <div class="left">
+            <img src="../met_login.jpg" alt="Fashion" />
+        </div>
+        <div class="right">
+            <h1 class="logo">THE MET</h1><br>
+            <h2>Faça login ou crie sua conta</h2><br>
+
+            <form>
+                <label for="email">Email</label>
+                <input type="email" id="email" placeholder="Insira seu email" required>
+                <label for="senha">Senha</label>
+                <input type="password" id="senha" placeholder="Insira sua senha" required>
+                <button type="submit">LOGIN</button>
+            </form>
+            <div class="divider">ou</div>
+            <div class="buttons">
+                <button class="cadastre">CADASTRO</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
