--- a/Projeto Individual/index.html
+++ b/Projeto Individual/index.html
@@ -39,22 +39,22 @@
 
   <div class="banner">
     <div class="container">
-      <h1>MET GALA</h1>
+      <h1>MET GALA</h1><br>
       <p>O Met gala é um dos eventos mais aguardados no mundo da moda <br> e o THE MET conta um pouco sobre o evento e o
-        que ele abrange.</p><br>
+        que ele abrange.</p><br><br>  
       <button class="botaoCadastro" onclick="cadastro()">Cadastro</button>
     </div>
   </div>
 
   <div class="social">
     <div class="container">
-      <div class="boxes">
-        <img src="../elanor_lambert.png">
-      </div>
       <div class="box">
         <h4>Eleanor Lambert</h4>
         <p>Foi a fundadora da New York Fashion Week, do Council of Fashion Designers of America, do Met Gala e da
           International Best Dressed List.</p>
+      </div>
+      <div class="boxes">
+        <img src="../Projeto Individual/Img/elanor_lambert.png">
       </div>
     </div>
   </div>
@@ -67,7 +67,20 @@
            além de servir para angariar fundos para o departamento.</p>
       </div>
       <div class="boxes">
-        <img src="../Diana_Vreeland.webp">
+        <img src="../Projeto Individual/Img/Diana_Vreeland.webp">
+      </div>
+    </div>
+  </div>
+
+  <div class="social">
+    <div class="container">
+      <div class="box">
+        <h4>Anna Wintour</h4>
+        <p>A principal organizadora e presidente do Met Gala,
+         editora-chefe da Vogue americana desde 1995. Responsável por escolher os convidados do evento e o tema da exposição.</p>
+      </div>
+      <div class="boxes">
+        <img src="../Projeto Individual/Img/anna_wintour.jpeg">
       </div>
     </div>
   </div>
