--- a/Projeto Individual/login.html
+++ b/Projeto Individual/login.html
@@ -37,11 +37,11 @@
 
       <div class="container">
         <div class="left">
-            <img src="../met_login.jpg" alt="Fashion" />
+            <img src="../Projeto Individual/Img/met_login.jpg" alt="Fashion" />
         </div>
         <div class="right">
             <h1 class="logo">THE MET</h1><br>
-            <h2>Faça login ou crie sua conta</h2><br>
+            <h2>Faça seu login</h2><br>
 
             <form>
                 <label for="email">Email</label>
@@ -57,4 +57,10 @@
         </div>
     </div>
 </body>
+
+<script>
+  function cadastre(){
+    window.location.href = "cadastro.html";
+  }
+</script>
 </html>
