--- a/Site/index.html
+++ b/Site/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Met</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="./css/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap"
@@ -54,7 +54,7 @@
           International Best Dressed List.</p>
       </div>
       <div class="boxes">
-        <img src="../Projeto Individual/Img/elanor_lambert.png">
+        <img src="./Img/elanor_lambert.png">
       </div>
     </div>
   </div>
@@ -67,7 +67,7 @@
            além de servir para angariar fundos para o departamento.</p>
       </div>
       <div class="boxes">
-        <img src="../Projeto Individual/Img/Diana_Vreeland.webp">
+        <img src="./Img/Diana_Vreeland.webp">
       </div>
     </div>
   </div>
@@ -80,7 +80,7 @@
          editora-chefe da Vogue americana desde 1995. Responsável por escolher os convidados do evento e o tema da exposição.</p>
       </div>
       <div class="boxes">
-        <img src="../Projeto Individual/Img/anna_wintour.jpeg">
+        <img src="./Img/anna_wintour.jpeg">
       </div>
     </div>
   </div>
