--- a/Site/cadastro.html
+++ b/Site/cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Met</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="./css/login.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -36,7 +36,7 @@
       </div>
       <div class="container">
         <div class="left">
-            <img src="../Projeto Individual/Img/cadastro_image.jpeg" alt="Fashion" />
+            <img src="./Img/cadastro_image.jpeg" alt="Fashion" />
         </div>
         <div class="right">
             <h1 class="logo">THE MET</h1><br>
