--- a/Site/index.html
+++ b/Site/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Met</title>
+  <title>Met Costume</title>
   <link rel="stylesheet" href="./css/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
 <body>
   <div class="header">
     <div class="container">
-      <h1 class="titulo">THE MET</h1>
+      <h1 class="titulo">MET COSTUME</h1>
       <ul class="navbar">
         <li class="agora">
           <a href="index.html">Home</a>
@@ -40,9 +40,21 @@
   <div class="banner">
     <div class="container">
       <h1>MET GALA</h1><br>
-      <p>O Met gala é um dos eventos mais aguardados no mundo da moda <br> e o THE MET conta um pouco sobre o evento e o
-        que ele abrange.</p><br><br>  
+      <p>O Met gala é um dos eventos mais aguardados no mundo da moda e o nosso site <br> MET COSTUME conta um pouco sobre o evento e o
+        que ele abrange.</p><br><br>    
       <button class="botaoCadastro" onclick="cadastro()">Cadastro</button>
+    </div>
+  </div>
+
+  <div class="social">
+    <div class="historia">
+      <h3>História do Met Gala</h3>
+      <p>O Met Gala é um dos eventos de moda mais famosos do mundo, realizado anualmente no Metropolitan Museum of Art, em Nova York. Criado em 1948 pela publicitária Eleanor Lambert, o evento começou como um jantar beneficente simples para arrecadar fundos para o Costume Institute do museu.
+
+        A grande transformação aconteceu em 1995, quando Anna Wintour, da revista Vogue, assumiu a organização. Desde então, o Met Gala se tornou um espetáculo de moda e cultura pop, com temas criativos a cada ano e presenças de celebridades do mundo inteiro.
+        
+        Hoje, o Met Gala é conhecido por seus trajes ousados, sua importância na indústria da moda e sua influência global.
+      </p>
     </div>
   </div>
 
@@ -87,7 +99,8 @@
 
   <div class="footer">
     <div class="container">
-      <h4>Feito por Anna Luiza Segarra - Para mais informações siga nossas redes sociais <br> &copy; 2025</h4>
+      <h4>Feito por Anna Luiza Segarra - Para mais informações siga nossas redes sociais <br>
+        @annaluiza_segarra  &  (11)94103-4455 <br> &copy; 2025</h4>
       <span class="version">v1.0.0</span>
     </div>
   </div>
