--- a/Site/cadastro.html
+++ b/Site/cadastro.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Met</title>
+    <title>Met Costume</title>
     <link rel="stylesheet" href="./css/login.css">
+    <link rel="stylesheet" href="./css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -13,7 +14,7 @@
 <body>
     <div class="header">
         <div class="container">
-          <h1 class="titulo">THE MET</h1>
+          <h1 class="titulo">MET COSTUME</h1>
           <ul class="navbar">
             <li class="agora">
               <a href="index.html">Home</a>
@@ -39,7 +40,7 @@
             <img src="./Img/cadastro_image.jpeg" alt="Fashion" />
         </div>
         <div class="right">
-            <h1 class="logo">THE MET</h1><br>
+            <h1 class="logo">MET COSTUME</h1><br>
             <h2>Crie sua conta</h2><br>
 
             <form>
