--- a/Site/temas.html
+++ b/Site/temas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Met</title>
+    <title>Met Costume</title>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 <body>
     <div class="header">
         <div class="container">
-          <h1 class="titulo">THE MET</h1>
+          <h1 class="titulo">MET COSTUME</h1>
           <ul class="navbar">
             <li class="agora">
               <a href="index.html">Home</a>
