--- a/paginas/home.html
+++ b/paginas/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cozinha</title>
+    <title>By Cooked</title>
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <div class="logo">Anninha e Ba</div>
+        <div class="logo">By Cooked</div>
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
@@ -39,6 +39,14 @@
                 <button class="botaoCadastro" onclick="cadastro()">Cadastro</button>
             </div>
         </div>
+    </div>
+
+    <div class="container">
+        <h2>História</h2><br>
+        <p>O By Cooked vem de uma união de livros de receita, de uma família muito miscigenada e com uma variedade de receitas
+        que tem histórias para contar, juntamente com isso trazemos releituras dessas receitas para o público vegetariano, 
+        assim tentando atender a um público mais abrangente.
+        </p>
     </div>
 </body>
 
