--- a/paginas/cadastro.html
+++ b/paginas/cadastro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cozinha</title>
+    <title>By Cooked</title>
     <link rel="stylesheet" href="./css/registro.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <div class="logo">Anninha e Ba</div>
+        <div class="logo">By Cooked</div>
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
