--- a/paginas/home.html
+++ b/paginas/home.html
@@ -32,28 +32,73 @@
     <div class="banner">
         <div class="img">
             <div class="container">
-                <h1>Anninha na Cozinha</h1><br>
+                <h1>By Cooked</h1><br>
                 <p>Esse site de receitas é uma homenagem a minha família <br> a cultura e o amor em forma de comida
-                    que é transmitida com nossas receitas!
+                    que é transmitida por meio das nossas receitas <br> se junte a nós para receber atualizações de
+                    novas
+                    comidas maravilhosas!
                 </p><br><br>
-                <button class="botaoCadastro" onclick="cadastro()">Cadastro</button>
+                <button class="botaoCadastro" onclick="cadastro()">Cadastre-se</button>
             </div>
         </div>
     </div>
 
-    <div class="container">
-        <h2>História</h2><br>
-        <p>O By Cooked vem de uma união de livros de receita, de uma família muito miscigenada e com uma variedade de receitas
-        que tem histórias para contar, juntamente com isso trazemos releituras dessas receitas para o público vegetariano, 
-        assim tentando atender a um público mais abrangente.
+    <div class="container_hist">
+        <h2>História</h2><br><br>
+        <p>O By Cooked vem de uma união de livros de receita, de uma família muito miscigenada e com uma variedade de
+            receitas
+            que tem histórias para contar, juntamente com isso trazemos releituras dessas receitas para o público
+            vegetariano,
+            assim tentando atender a um público mais abrangente.<br><br>
+            No nosso site contamos com receitas salgadas, doces e vegetarianas. Nossas receitas vem de uma mistura da
+            cultura brasileira
+            japonesa, espanhola, italiana e de mais alguns lugares do mundo! <br><br>
+            Esperamos que gostem do site, das receitas e possam degustar as comidas maravilhosas que vocês aprenderam a
+            fazer!
         </p>
     </div>
+
+    <section class="receitas-container">
+        <div class="banner">
+            <div class="img1">
+
+                <div class="receita">
+                    <img src="./img/fue.jpeg" alt="dedicacao">
+                    <h3>Dedicação</h3>
+                    <p>Sempre buscando melhorar para alcançar um resultado excelente</p>
+                </div>
+
+                <div class="receita">
+                    <img src="./img/coração.jpeg" alt="amor">
+                    <h3>Amor</h3>
+                    <p>Com amor fazemos tudo com um propósito e com cuidado</p>
+                </div>
+
+                <div class="receita">
+                    <img src="./img/paciencia.jpeg" alt="paciencia">
+                    <h3>Paciência</h3>
+                    <p>Não pular processos e respeitar o tempo das etapas</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
+            <nav>
+                <a href="#">Sobre</a>
+                <a href="#">Contato</a>
+            </nav>
+        </div>
+    </footer>
+
 </body>
 
 <script>
     function cadastro() {
-      window.location.href = "cadastro.html";
+        window.location.href = "cadastro.html";
     }
-  </script>
+</script>
 
 </html>
