--- a/paginas/login.html
+++ b/paginas/login.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
 </head>
 
-<body>
+<body class="registros">
     <header>
         <div class="logo">By Cooked</div>
         <nav>
@@ -30,11 +30,11 @@
     </header>
     <div class="pagina">
         <div class="container">
-            <div class="image-section">
-                <img src="./img/home_1.jpeg" alt="Imagem culinária">
+            <div class="image-section-login">
+                <img src="./img/img_login.jpeg" alt="Imagem culinária">
             </div>
             <div class="login-section"> 
-                <h2>Login</h2>
+                <h1>Login</h1><br>
                 <form>
                     <label for="email">E-mail</label>
                     <input type="email" id="email" placeholder="nome@email.com" required>
