Mais páginas e css

--- a/paginas/home.html
+++ b/paginas/home.html
@@ -45,13 +45,13 @@
 
     <div class="container_hist">
         <h2>História</h2><br><br>
-        <p>O By Cooked vem de uma união de livros de receita, de uma família muito miscigenada e com uma variedade de
+        <p>O By Cooked é composto por uma união de livros de receita, de uma família muito miscigenada e com uma variedade de
             receitas
             que tem histórias para contar, juntamente com isso trazemos releituras dessas receitas para o público
             vegetariano,
             assim tentando atender a um público mais abrangente.<br><br>
             No nosso site contamos com receitas salgadas, doces e vegetarianas. Nossas receitas vem de uma mistura da
-            cultura brasileira
+            cultura brasileira,
             japonesa, espanhola, italiana e de mais alguns lugares do mundo! <br><br>
             Esperamos que gostem do site, das receitas e possam degustar as comidas maravilhosas que vocês aprenderam a
             fazer!
@@ -61,11 +61,11 @@
     <section class="receitas-container">
         <div class="banner">
             <div class="img1">
-
+                <h1>Se lembre de ter</h1>
                 <div class="receita">
                     <img src="./img/fue.jpeg" alt="dedicacao">
-                    <h3>Dedicação</h3>
-                    <p>Sempre buscando melhorar para alcançar um resultado excelente</p>
+                    <h3>Resiliência</h3>
+                    <p>Sempre buscar melhorar para alcançar um resultado excelente</p>
                 </div>
 
                 <div class="receita">
@@ -77,7 +77,7 @@
                 <div class="receita">
                     <img src="./img/paciencia.jpeg" alt="paciencia">
                     <h3>Paciência</h3>
-                    <p>Não pular processos e respeitar o tempo das etapas</p>
+                    <p>Respeitar o tempo das etapas e o processo do preparo da receita</p>
                 </div>
             </div>
         </div>
