--- a/paginas/receitas/onigiri.html
+++ b/paginas/receitas/onigiri.html
@@ -29,11 +29,11 @@
         </nav>
     </header>
 <div class="comidas">
-    <h1>Empada de Frango</h1>
+    <h1>Onigiri</h1>
 
     <div class="topo-receita">
         <div class="box">
-            <img src="../img/Empadão De Frango.jpeg" alt="empada">
+            <img src="../img/Onigiri.jpeg" alt="onigiri">
         </div>
     </div>
 
