--- a/paginas/doces.html
+++ b/paginas/doces.html
@@ -71,4 +71,16 @@
             <button>Ver receita</button>
         </div>
     </section>
+
+        <footer>
+        <div class="footer-content">
+            <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
+            <nav>
+                <a href="#">Sobre</a>
+                <a href="#">Contato</a>
+            </nav>
+        </div>
+    </footer>
 </body>
+
+</html>
