--- a/paginas/receitas/alho.html
+++ b/paginas/receitas/alho.html
@@ -29,11 +29,11 @@
         </nav>
     </header>
 <div class="comidas">
-    <h1>Salada de Grão de Bico</h1>
+    <h1>Risoto de Alho Poró</h1>
 
     <div class="topo-receita">
         <div class="box">
-            <img src="../img/salada.jpeg" alt="grao">
+            <img src="../img/alho.jpeg" alt="alho">
         </div>
     </div>
 
