--- a/paginas/receitas/falafel.html
+++ b/paginas/receitas/falafel.html
@@ -29,11 +29,11 @@
         </nav>
     </header>
 <div class="comidas">
-    <h1>Salada de Grão de Bico</h1>
+    <h1>Hamburguer de falafel</h1>
 
     <div class="topo-receita">
         <div class="box">
-            <img src="../img/salada.jpeg" alt="grao">
+            <img src="../img/falafel.jpeg" alt="falafel">
         </div>
     </div>
 
