--- a/paginas/receitas/filet.html
+++ b/paginas/receitas/filet.html
@@ -29,11 +29,11 @@
         </nav>
     </header>
 <div class="comidas">
-    <h1>Empada de Frango</h1>
+    <h1>Risoto de Filet Mignon</h1>
 
     <div class="topo-receita">
         <div class="box">
-            <img src="../img/Empadão De Frango.jpeg" alt="empada">
+            <img src="../img/risoto_filet.jpeg" alt="empada">
         </div>
     </div>
 
@@ -41,25 +41,37 @@
         <section class="ingredientes">
             <h2>Ingredientes</h2>
             <ul>
-                <li>250g de macarrão penne</li>
-                <li>1 colher de sopa de azeite</li>
-                <li>2 dentes de alho picados</li>
-                <li>1 cebola pequena picada</li>
-                <li>1 lata de tomate pelado</li>
-                <li>1/2 caixinha de creme de leite</li>
-                <li>Sal e pimenta a gosto</li>
-                <li>Queijo parmesão ralado para servir</li>
+            <li>2 xícaras de arros arbóreo</li>
+            <li>350g de filé-mignon picado em tiras</li>
+            <li>1 xícara (chá) de champignon fatiado</li>
+            <li>1 xícara (chá) de vinho branco seco</li>
+            <li>1 xícara e meia (chá) de água quente</li>
+            <li>1 xícara e meia (chá) de caldo de carne caseiro</li>
+            <li>1 pitada de noz-moscada em pó</li>
+            <li>2 colheres (sopa) de margarina</li>
+            <li>1 cebola-roxa picada</li>
+            <li>2 dentes de alho picado</li>
+            <li>1 colher (chá) de sal</li>
+            <li>1 pitada de pimenta-do-reino preta moída</li>
+            <li>1 fio de azeite</li>
+            <li>100mL de água</li>
+            <li>1 colher (chá) de cebolinha picada</li>
             </ul>
         </section>
 
         <section class="preparo">
             <h2>Modo de Preparo</h2>
             <ol>
-                <li>Cozinhe o macarrão conforme as instruções da embalagem. Reserve.</li>
-                <li>Em uma panela, aqueça o azeite e refogue o alho e a cebola até dourar.</li>
-                <li>Adicione o tomate pelado, amasse bem e cozinhe por 10 minutos.</li>
-                <li>Adicione o creme de leite, tempere com sal e pimenta.</li>
-                <li>Misture o molho ao macarrão cozido e sirva com queijo ralado por cima.</li>
+            <li>Em uma frigideira, coloque metade da margarina e deixe derreter.</li>
+            <li>Acrescente o filé mignon e tempere com o sal e a pimenta-do-reino.</li>
+            <li>Adicione o champignon fatiado e refogue até o filé mignon começar a fritar.</li>
+            <li>Retire o filé mignon e os cogumelos da panela e reserve.</li>
+            <li>Na mesma frigideira, coloque o azeite e o restante da margarina. Adicione a cebola-roxa e o alho e refogue.</li>
+            <li>Acrescente o arroz arbóreo e mexa bem. Adicione o sal e o vinho branco seco.</li>
+            <li>Acrescente o caldo de carne aos poucos e deixe cozinhar por cerca de 20 minutos.</li>
+            <li>Adicione o filé mignon e o champignon reservados e a noz-moscada.</li>
+            <li>Adicione a cebolinha. Misture bem.</li>
+            <li>Sirva a seguir.</li>
             </ol>
         </section>
     </main>
