--- a/paginas/receitas/onigiri.html
+++ b/paginas/receitas/onigiri.html
@@ -33,7 +33,7 @@
 
     <div class="topo-receita">
         <div class="box">
-            <img src="../img/Onigiri.jpeg" alt="onigiri">
+            <img src="../img/oniguiri.jpg" alt="onigiri">
         </div>
     </div>
 
@@ -41,25 +41,24 @@
         <section class="ingredientes">
             <h2>Ingredientes</h2>
             <ul>
-                <li>250g de macarrão penne</li>
-                <li>1 colher de sopa de azeite</li>
-                <li>2 dentes de alho picados</li>
-                <li>1 cebola pequena picada</li>
-                <li>1 lata de tomate pelado</li>
-                <li>1/2 caixinha de creme de leite</li>
-                <li>Sal e pimenta a gosto</li>
-                <li>Queijo parmesão ralado para servir</li>
+                <li>500 gramas de arroz oriental</li>
+                <li>500ml de água filtrada</li>
+                <li>2 colheres de sopa de vinagre de arroz</li>
+                <li>1 colher de chá de açúcar</li>
+                <li>1 pitada de sal</li>
+                <li>folhas de alga nori</li>
             </ul>
         </section>
 
         <section class="preparo">
             <h2>Modo de Preparo</h2>
             <ol>
-                <li>Cozinhe o macarrão conforme as instruções da embalagem. Reserve.</li>
-                <li>Em uma panela, aqueça o azeite e refogue o alho e a cebola até dourar.</li>
-                <li>Adicione o tomate pelado, amasse bem e cozinhe por 10 minutos.</li>
-                <li>Adicione o creme de leite, tempere com sal e pimenta.</li>
-                <li>Misture o molho ao macarrão cozido e sirva com queijo ralado por cima.</li>
+                <li>Comece lavando muito bem o arroz, com a ajuda de uma peneira ou coador até a água sair limpa.</li>
+                <li>Em seguida cozinhe o arroz numa panela com 500ml de água filtrada, o vinagre, o sal e açúcar.</li>
+                <li>Quando a água ferver, deixe cozinhar por cerca de 15 minutos, com a panela semi tampada</li>
+                <li>Desligue o fogo, mexa o arroz e reserve na panela destampada por 10 minutos, com o fogo desligado.</li>
+                <li>Com o arroz ainda morno, modele em formato de triângulo. Para isso pegue uma porção de arroz, modele em forma de bola e depois cuidadosamente vá moldando as laterais. Se quiser, você pode abrir um furo no meio para colocar algum tipo de recheio.</li>
+                <li>Passe um pouco de sal com as mão envolta dos onigiris e envolva-os com alga nori (opcional). Sirva</li>
             </ol>
         </section>
     </main>
