--- a/paginas/receitas/palmito.html
+++ b/paginas/receitas/palmito.html
@@ -29,11 +29,11 @@
         </nav>
     </header>
 <div class="comidas">
-    <h1>Salada de Grão de Bico</h1>
+    <h1>Empadão de Palmito</h1>
 
     <div class="topo-receita">
         <div class="box">
-            <img src="../img/salada.jpeg" alt="grao">
+            <img src="../img/palmito.jpeg" alt="pal">
         </div>
     </div>
 
