--- a/paginas/salgados.html
+++ b/paginas/salgados.html
@@ -43,7 +43,7 @@
 
         <div class="receita">
             <div class="box">
-                <img src="./img/Onigiri.jpeg" alt="oni">
+                <img src="./img/oniguiri.jpg" alt="oni">
             </div>
             <h3>Onigiri</h3>
             <button onclick="transfer1()">Ver receita</button>
@@ -70,17 +70,17 @@
 
         <div class="receita">
             <div class="box">
-                <img src="./img/salada.jpeg" alt="grão">
+                <img src="./img/musculo.jpeg" alt="musculo">
             </div>
-            <h3>Salada de grão de bico</h3>
+            <h3>Músculo acebolado</h3>
             <button onclick="transfer4()">Ver receita</button>
         </div>
 
         <div class="receita">
             <div class="box">
-                <img src="./img/Pizza Quatro Queijos.jpeg" alt="pizza">
+                <img src="./img/pizza.jpeg" alt="pizza">
             </div>
-            <h3>Pizza de gorgonzola</h3>
+            <h3>Pizza napolitana</h3>
             <button onclick="transfer5()">Ver receita</button>
         </div>
     </section>
@@ -117,7 +117,7 @@
 
         function transfer4() {
 
-        window.location.href = "receitas/grao.html";
+        window.location.href = "receitas/musc.html";
     }
 
         function transfer5() {
