--- a/paginas/receitas/bolo.html
+++ b/paginas/receitas/bolo.html
@@ -29,11 +29,11 @@
         </nav>
     </header>
 <div class="comidas">
-    <h1>Salada de Grão de Bico</h1>
+    <h1>Bolo de Limão Siciliano</h1>
 
     <div class="topo-receita">
         <div class="box">
-            <img src="../img/salada.jpeg" alt="grao">
+            <img src="../img/limao.webp" alt="limao">
         </div>
     </div>
 
