--- a/paginas/receitas/choco.html
+++ b/paginas/receitas/choco.html
@@ -29,11 +29,11 @@
         </nav>
     </header>
 <div class="comidas">
-    <h1>Salada de Grão de Bico</h1>
+    <h1>Bolo de Chocolate ao Rum</h1>
 
     <div class="topo-receita">
         <div class="box">
-            <img src="../img/salada.jpeg" alt="grao">
+            <img src="../img/chocolate.jpg" alt="choco">
         </div>
     </div>
 
