--- a/paginas/receitas/musc.html
+++ b/paginas/receitas/musc.html
@@ -29,49 +29,42 @@
         </nav>
     </header>
     <div class="comidas">
-        <h1>Pizza Napolitana</h1>
+        <h1>Músculo Acebolado</h1>
 
         <div class="topo-receita">
             <div class="box">
-                <img src="../img/pizza.jpeg" alt="empada">
+                <img src="../img/musculo.jpeg" alt="empada">
             </div>
         </div>
 
         <main class="conteudo-receita">
             <section class="ingredientes">
                 <h2>Ingredientes</h2>
-                <h3>Massa:</h3>
                 <ul>
-                    <li>500ml de água</li>
-                    <li>Farinha de trigo até dar o ponto</li>
-                    <li>50g de fermento biológico</li>
-                    <li>1 colher (chá) de sal</li>
-                    <li>3 colheres (sopa) de açúcar</li>
-                    <li>2 colheres (sopa) de azeite</li>
-                </ul><br>
-                <h3>Recheio:</h3>
-                <ul>
-                    <li>400g de molho de tomate</li>
-                    <li>200g de mussarela em cubos</li>
-                    <li>Azeite a gosto</li>
-                    <li>Orégano a gosto</li>
-                    <li>Azeitonas pretas a gosto</li>
+                    <li>500g de músculo bovino cortado em cubos</li>
+                    <li>2 colheres (sopa) de vinagre</li>
+                    <li>1 cebola pequena cortada em pétalas</li>
+                    <li>2 dentes de alho amassados</li>
+                    <li>3 colheres (sopa) de azeite de oliva</li>
+                    <li>1/2 xícara (chá) de molho de tomate</li>
+                    <li>2 xícaras (chá) de caldo de legumes</li>
+                    <li>200g de abóbora cortada em cubos</li>
+                    <li>100g de vagem cortada em pedaços</li>
+                    <li>Sal a gosto</li>
+                    <li>Pimenta a gosto</li>
                 </ul>
             </section>
 
             <section class="preparo">
                 <h2>Modo de Preparo</h2>
                 <ol>
-                    <li>Em um recipiente, coloque a água, o açúcar, o fermento, o sal e o azeite. Misture bem todos os
-                        ingredientes.</li>
-                    <li>Adicione a farinha de trigo aos poucos até a massa desgrudar das mãos.</li>
-                    <li>Sove a massa por alguns minutos e deixe crescer por cerca de 30 minutos.</li>
-                    <li>Abra a massa com um rolo e coloque em uma forma untada com azeite.</li>
-                    <li>Pré-aqueça o forno e asse somente a massa por aproximadamente 15 minutos.</li>
-                    <li>Retire do forno, espalhe o molho de tomate sobre a massa pré-assada.</li>
-                    <li>Distribua os cubos de mussarela de maneira uniforme. Acrescente as anchovas, se desejar.</li>
-                    <li>Tempere com azeite, orégano e pimenta a gosto.</li>
-                    <li>Leve ao forno pré-aquecido a 250°C por cerca de 20 minutos ou até a mussarela derreter.</li>
+                    <li>Tempere o músculo com o vinagre, o sal, a pimenta, a cebola e o alho.</li>
+                    <li>Em uma panela de pressão, aqueça o azeite e doure a carne até secar.</li>
+                    <li>Junte o molho de tomate e o caldo de legumes.</li>
+                    <li>Adicione a abóbora e a vagem.</li>
+                    <li>Tampe a panela e cozinhe por aproximadamente 25 minutos após pegar pressão.</li>
+                    <li>Desligue o fogo, aguarde a pressão sair naturalmente e abra a panela com cuidado.</li>
+                    <li>Mexa bem e sirva em seguida.</li>
                 </ol>
             </section>
         </main>
