--- a/paginas/receitas/strog.html
+++ b/paginas/receitas/strog.html
@@ -29,11 +29,11 @@
         </nav>
     </header>
 <div class="comidas">
-    <h1>Salada de Grão de Bico</h1>
+    <h1>Strogonoff vegetariano</h1>
 
     <div class="topo-receita">
         <div class="box">
-            <img src="../img/salada.jpeg" alt="grao">
+            <img src="../img/strog.jpeg" alt="strog">
         </div>
     </div>
 
