--- a/paginas/receitas/yakisoba.html
+++ b/paginas/receitas/yakisoba.html
@@ -28,51 +28,68 @@
             </ul>
         </nav>
     </header>
-<div class="comidas">
-    <h1>Empada de Frango</h1>
+    <div class="comidas">
+        <h1>Yakissoba</h1>
 
-    <div class="topo-receita">
-        <div class="box">
-            <img src="../img/Empadão De Frango.jpeg" alt="empada">
+        <div class="topo-receita">
+            <div class="box">
+                <img src="../img/Yakisoba.jpeg" alt="empada">
+            </div>
         </div>
-    </div>
 
-    <main class="conteudo-receita">
-        <section class="ingredientes">
-            <h2>Ingredientes</h2>
-            <ul>
-                <li>250g de macarrão penne</li>
-                <li>1 colher de sopa de azeite</li>
-                <li>2 dentes de alho picados</li>
-                <li>1 cebola pequena picada</li>
-                <li>1 lata de tomate pelado</li>
-                <li>1/2 caixinha de creme de leite</li>
-                <li>Sal e pimenta a gosto</li>
-                <li>Queijo parmesão ralado para servir</li>
-            </ul>
-        </section>
+        <main class="conteudo-receita">
+            <section class="ingredientes">
+                <h2>Ingredientes</h2>
+                <ul>
+                    <li>250g de macarrão sobá (para yakisoba)</li>
+                    <li>150g de filé de frango em cubos</li>
+                    <li>150g de alcatra em cubos</li>
+                    <li>1 colher (sopa) de óleo de gergelim</li>
+                    <li>1 xícara de pimentão verde em cubos</li>
+                    <li>1 xícara de cenoura em rodelas</li>
+                    <li>½ xícara de shoyu</li>
+                    <li>1 colher (chá) de açúcar</li>
+                    <li>1 colher (sopa) de amido de milho dissolvido em ½ xícara de água</li>
+                    <li>½ xícara de brócolis picado</li>
+                    <li>1 xícara de repolho em cubos</li>
+                    <li>Sal a gosto</li>
+                    <li>Pimenta-do-reino a gosto</li>
+                    <li>2 ½ litros de água</li>
+                </ul>
+            </section>
 
-        <section class="preparo">
-            <h2>Modo de Preparo</h2>
-            <ol>
-                <li>Cozinhe o macarrão conforme as instruções da embalagem. Reserve.</li>
-                <li>Em uma panela, aqueça o azeite e refogue o alho e a cebola até dourar.</li>
-                <li>Adicione o tomate pelado, amasse bem e cozinhe por 10 minutos.</li>
-                <li>Adicione o creme de leite, tempere com sal e pimenta.</li>
-                <li>Misture o molho ao macarrão cozido e sirva com queijo ralado por cima.</li>
-            </ol>
-        </section>
-    </main>
+            <section class="preparo">
+                <h2>Modo de Preparo</h2>
+                <ol>
+                    <li>Despeje o óleo de gergelim, o frango e a alcatra em uma panela.</li>
+                    <li>Frite até dourar.</li>
+                    <li>Adicione o pimentão verde e a cenoura.</li>
+                    <li>Refogue por 3 minutos.</li>
+                    <li>Junte o shoyu e o açúcar.</li>
+                    <li>Ferva por 3 minutos.</li>
+                    <li>Coloque o açúcar em uma tigela.</li>
+                    <li>Dissolva o amido de milho.</li>
+                    <li>Despeje a mistura na panela.</li>
+                    <li>Adicione o brócolis, o repolho, o sal e a pimenta-do-reino.</li>
+                    <li>Mexa.</li>
+                    <li>Acrescente a água para ferver.</li>
+                    <li>Coloque o macarrão sobá quando ferver, até ficar al dente.</li>
+                    <li>Escorra o macarrão.</li>
+                    <li>Finalize com o molho antes de servir.</li>
+                </ol>
+            </section>
+        </main>
 
         <footer>
-        <div class="footer-content">
-            <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
-            <nav>
-                <a href="#">Sobre</a>
-                <a href="#">Contato</a>
-            </nav>
-        </div>
-    </footer>
-</div>
+            <div class="footer-content">
+                <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
+                <nav>
+                    <a href="#">Sobre</a>
+                    <a href="#">Contato</a>
+                </nav>
+            </div>
+        </footer>
+    </div>
 </body>
+
 </html>
